welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: reassignment to val
	if (estSurBiscuit = true) {
                          ^